// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Transition renders show without crashing 1`] = `
<Transition
  appear={true}
  enter={true}
  exit={true}
  in={true}
  mountOnEnter={true}
  onEnter={[Function]}
  onEntered={[Function]}
  onEntering={[Function]}
  onExit={[Function]}
  onExited={[Function]}
  onExiting={[Function]}
  timeout={300}
  unmountOnExit={true}
>
  <Component />
</Transition>
`;

exports[`Transition renders without show without crashing 1`] = `
<Transition
  appear={true}
  enter={true}
  exit={true}
  in={false}
  mountOnEnter={true}
  onEnter={[Function]}
  onEntered={[Function]}
  onEntering={[Function]}
  onExit={[Function]}
  onExited={[Function]}
  onExiting={[Function]}
  timeout={300}
  unmountOnExit={true}
>
  <Component />
</Transition>
`;
